--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
+  "browser": {
+    "crypto": false,
+    "http": false,
+    "https": false,
+    "os": false,
+    "stream": false
+  },
   "dependencies": {
     "@angular/animations": "~13.1.0",
     "@angular/common": "~13.1.0",
@@ -18,8 +25,21 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@walletconnect/web3-provider": "^1.7.7",
+    "agentkeepalive": "^4.2.0",
+    "assert": "^2.0.0",
+    "browser": "^0.2.6",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "node": "^17.3.1",
+    "os-browserify": "^0.3.0",
     "rxjs": "~7.4.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
+    "web3": "^1.7.0",
+    "web3modal": "^1.9.5",
+    "webpack": "^5.66.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -27,7 +47,9 @@
     "@angular/cli": "~13.1.4",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.42",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
